<resources>
    <string name="app_name">Beer List</string>
    <string name="beer_name">beer name</string>
    <string name="beer_tagline">beer tagline</string>
    <string name="beer_image">beer image</string>
    <string name="base_url">https://api.punkapi.com/v2/</string>
    <string name="search_beer">Search beer</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="list_favorites">List beers favorites</string>
    <string name="hint_search_beer">Search for beer...</string>
    <string name="description_beer">Text for description of a beer</string>
    <string name="beer_transition_key">beer</string>
    <string name="internal_error">Internal error</string>
    <string name="title_beer_details">Beer Details</string>
    <string name="title_beer_favorites">Favorite beer</string>
    <string name="splash_beer_image">splash beer image</string>
    <string name="no_connection">no internet connection</string>
    <string name="try_again">Try again</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="added_favorites">Added to favorites</string>
    <string name="removed_favorites">removed from favorites</string>
    <string name="image_dynamics">Image dynamics</string>
    <string name="image_no_favorites_beers">Image no favorites beers</string>
</resources>
