<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginBottom="1dp">

    <ImageView
        android:id="@+id/imageViewBeer"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/beer_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/beerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/imageViewBeer"
        android:text="@string/beer_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/beerTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/beerName"
        android:layout_below="@+id/beerName"
        android:maxLength="35"
        android:layout_marginTop="3dp"
        android:text="@string/beer_tagline" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_chevron_right" />

</RelativeLayout>